feat: upgrades definition to match valhalla 3.6.2 config object
