# Sources/ValhallaConfigModels/Models/HeirarchyLimits.swift
@@ -1,0 +1,34 @@
+//
+// HeirarchyLimits.swift
+//
+// Generated by openapi-generator
+// https://openapi-generator.tech
+//
+
+import Foundation
+#if canImport(AnyCodable)
+    import AnyCodable
+#endif
+
+public struct HeirarchyLimits: Codable, Hashable {
+    public var expandWithinDistance: HeirarchyLimitsExpandWithinDistance?
+    public var maxUpTransitions: HeirarchyLimitsMaxUpTransitions?
+
+    public init(expandWithinDistance: HeirarchyLimitsExpandWithinDistance? = nil, maxUpTransitions: HeirarchyLimitsMaxUpTransitions? = nil) {
+        self.expandWithinDistance = expandWithinDistance
+        self.maxUpTransitions = maxUpTransitions
+    }
+
+    public enum CodingKeys: String, CodingKey, CaseIterable {
+        case expandWithinDistance = "expand_within_distance"
+        case maxUpTransitions = "max_up_transitions"
+    }
+
+    // Encodable protocol methods
+
+    public func encode(to encoder: Encoder) throws {
+        var container = encoder.container(keyedBy: CodingKeys.self)
+        try container.encodeIfPresent(expandWithinDistance, forKey: .expandWithinDistance)
+        try container.encodeIfPresent(maxUpTransitions, forKey: .maxUpTransitions)
+    }
+}
