# Sources/ValhallaConfigModels/Models/ServiceLimitsHeirarchyLimits.swift
@@ -1,0 +1,42 @@
+//
+// ServiceLimitsHeirarchyLimits.swift
+//
+// Generated by openapi-generator
+// https://openapi-generator.tech
+//
+
+import Foundation
+#if canImport(AnyCodable)
+    import AnyCodable
+#endif
+
+public struct ServiceLimitsHeirarchyLimits: Codable, Hashable {
+    public var allowModifications: Bool? = false
+    public var bidirectionalAstar: ServiceLimitsHeirarchyLimitsBidirectionalAstar?
+    public var costmatrix: ServiceLimitsHeirarchyLimitsCostmatrix?
+    public var unidirectionalAstar: ServiceLimitsHeirarchyLimitsCostmatrix?
+
+    public init(allowModifications: Bool? = false, bidirectionalAstar: ServiceLimitsHeirarchyLimitsBidirectionalAstar? = nil, costmatrix: ServiceLimitsHeirarchyLimitsCostmatrix? = nil, unidirectionalAstar: ServiceLimitsHeirarchyLimitsCostmatrix? = nil) {
+        self.allowModifications = allowModifications
+        self.bidirectionalAstar = bidirectionalAstar
+        self.costmatrix = costmatrix
+        self.unidirectionalAstar = unidirectionalAstar
+    }
+
+    public enum CodingKeys: String, CodingKey, CaseIterable {
+        case allowModifications = "allow_modifications"
+        case bidirectionalAstar = "bidirectional_astar"
+        case costmatrix
+        case unidirectionalAstar = "unidirectional_astar"
+    }
+
+    // Encodable protocol methods
+
+    public func encode(to encoder: Encoder) throws {
+        var container = encoder.container(keyedBy: CodingKeys.self)
+        try container.encodeIfPresent(allowModifications, forKey: .allowModifications)
+        try container.encodeIfPresent(bidirectionalAstar, forKey: .bidirectionalAstar)
+        try container.encodeIfPresent(costmatrix, forKey: .costmatrix)
+        try container.encodeIfPresent(unidirectionalAstar, forKey: .unidirectionalAstar)
+    }
+}
