# Sources/ValhallaConfigModels/Models/ServiceLimitsHeirarchyLimitsCostmatrix.swift
@@ -1,0 +1,34 @@
+//
+// ServiceLimitsHeirarchyLimitsCostmatrix.swift
+//
+// Generated by openapi-generator
+// https://openapi-generator.tech
+//
+
+import Foundation
+#if canImport(AnyCodable)
+    import AnyCodable
+#endif
+
+public struct ServiceLimitsHeirarchyLimitsCostmatrix: Codable, Hashable {
+    public var maxAllowedUpTransitions: HeirarchyLimitsMaxUpTransitions?
+    public var maxExpandWithinDistance: ServiceLimitsHeirarchyLimitsCostmatrixMaxExpandWithinDistance?
+
+    public init(maxAllowedUpTransitions: HeirarchyLimitsMaxUpTransitions? = nil, maxExpandWithinDistance: ServiceLimitsHeirarchyLimitsCostmatrixMaxExpandWithinDistance? = nil) {
+        self.maxAllowedUpTransitions = maxAllowedUpTransitions
+        self.maxExpandWithinDistance = maxExpandWithinDistance
+    }
+
+    public enum CodingKeys: String, CodingKey, CaseIterable {
+        case maxAllowedUpTransitions = "max_allowed_up_transitions"
+        case maxExpandWithinDistance = "max_expand_within_distance"
+    }
+
+    // Encodable protocol methods
+
+    public func encode(to encoder: Encoder) throws {
+        var container = encoder.container(keyedBy: CodingKeys.self)
+        try container.encodeIfPresent(maxAllowedUpTransitions, forKey: .maxAllowedUpTransitions)
+        try container.encodeIfPresent(maxExpandWithinDistance, forKey: .maxExpandWithinDistance)
+    }
+}
