# Sources/ValhallaConfigModels/Models/ThorBidirectionalAstar.swift
@@ -1,0 +1,42 @@
+//
+// ThorBidirectionalAstar.swift
+//
+// Generated by openapi-generator
+// https://openapi-generator.tech
+//
+
+import Foundation
+#if canImport(AnyCodable)
+    import AnyCodable
+#endif
+
+public struct ThorBidirectionalAstar: Codable, Hashable {
+    public var alternativeCostExtend: Double? = 1.0
+    public var alternativeIterationsDelta: Int? = 100_000
+    public var heirarchyLimits: HeirarchyLimits?
+    public var thresholdDelta: Int? = 420
+
+    public init(alternativeCostExtend: Double? = 1.0, alternativeIterationsDelta: Int? = 100_000, heirarchyLimits: HeirarchyLimits? = nil, thresholdDelta: Int? = 420) {
+        self.alternativeCostExtend = alternativeCostExtend
+        self.alternativeIterationsDelta = alternativeIterationsDelta
+        self.heirarchyLimits = heirarchyLimits
+        self.thresholdDelta = thresholdDelta
+    }
+
+    public enum CodingKeys: String, CodingKey, CaseIterable {
+        case alternativeCostExtend = "alternative_cost_extend"
+        case alternativeIterationsDelta = "alternative_iterations_delta"
+        case heirarchyLimits = "heirarchy_limits"
+        case thresholdDelta = "threshold_delta"
+    }
+
+    // Encodable protocol methods
+
+    public func encode(to encoder: Encoder) throws {
+        var container = encoder.container(keyedBy: CodingKeys.self)
+        try container.encodeIfPresent(alternativeCostExtend, forKey: .alternativeCostExtend)
+        try container.encodeIfPresent(alternativeIterationsDelta, forKey: .alternativeIterationsDelta)
+        try container.encodeIfPresent(heirarchyLimits, forKey: .heirarchyLimits)
+        try container.encodeIfPresent(thresholdDelta, forKey: .thresholdDelta)
+    }
+}
