# Sources/ValhallaConfigModels/Models/ThorUnidirectionalAstar.swift
@@ -1,0 +1,30 @@
+//
+// ThorUnidirectionalAstar.swift
+//
+// Generated by openapi-generator
+// https://openapi-generator.tech
+//
+
+import Foundation
+#if canImport(AnyCodable)
+    import AnyCodable
+#endif
+
+public struct ThorUnidirectionalAstar: Codable, Hashable {
+    public var heirarchyLimits: HeirarchyLimits?
+
+    public init(heirarchyLimits: HeirarchyLimits? = nil) {
+        self.heirarchyLimits = heirarchyLimits
+    }
+
+    public enum CodingKeys: String, CodingKey, CaseIterable {
+        case heirarchyLimits = "heirarchy_limits"
+    }
+
+    // Encodable protocol methods
+
+    public func encode(to encoder: Encoder) throws {
+        var container = encoder.container(keyedBy: CodingKeys.self)
+        try container.encodeIfPresent(heirarchyLimits, forKey: .heirarchyLimits)
+    }
+}
